runtime uses truffle-compiler in tests